fix sponsor spacing

--- a/frontpage/css/main.css
+++ b/frontpage/css/main.css
@@ -809,6 +809,7 @@ details[open] .expand-icon:after {
     display: flex;
     margin: 0 auto;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .sponsor-row > a {
